aarlo
0.8.1a10
  Add siren support.
0.8.1a9
  Fix a location issue (again)
0.8.1a8
  Fix a location issue
0.8.1a7
  Fix camera recording.
  Tidy up a docs issue.
0.8.1a6
  Make some instance variables explicit
  Fix service entries
  Fix some translations to use defaults
0.8.1a5
  Bump pyaarlo revision to handle `synced` state devices.
0.8.1a4
  Fix initial options to create devices.
  Fix integration naming.
0.8.1a3
  Allow pyaarlo config to be passed from `/config/aarlo.yaml`
  Bump pyaarlo revision.
0.8.1a2
  Fix a slugify issue.
0.8.1a1
  New Alpha build.
  Better config flow support.
  Better entity <-> device <-> integration support, you can now see Arlo device
   subclassed by device.
  Tidied up classes to better use Home Assistant base classes.
  Removed deprecated files.
  Fixed up translation files.
  Start of a general code tidy.

0.8.0a16:
  Bump pyaarlo revision.
0.8.0a15:
  Bump pyaarlo revision.
0.8.0a14:
  Limit retries to (try to) prevent cloudflare lockouts
0.8.0a13:
  Handle Arlo backend changes.
  Make MQTT more configurable.
  Bump pyaarlo revision.
0.8.0a12: Add initial 8-in-1 sensor support
    [thanks xirtamoen for lending the sensors]
  Support Arlo v4 APIs
    [thanks JeffSteinbok]
  Add in 2FA timeouts.
0.8.0a11: Fix DEVICE_CLASS_* constants.
0.8.0a10: Add cipher_list support.
  Bumped pyyaarlo version.
0.8.0a9: Call stop on auth failure.
  Smarter backend detection.
  Custom user agent support.
  Bumped pyaarlo version.
0.8.0a8: Bumped pyaarlo version.
  Fixed DOMAIN handling and mode changes, snapshot...
  Fixed entity_id in callbacks
0.8.0a7: Bumped pyaarlo version.
  Use Mqtt or SSE backend
  Support Mqtt backend [pyaarlo]
  Added support for devices (NickM-27)
  Fix device attribute error messages.
0.8.0a6: Added battery device class
0.8.0a5: Add width/height to camera_image
0.8.0a4: Bumped pyaarlo version.
  Add port support to IMAP. [pyaarlo]
  Don't get resources for Essential cameras. [pyaarlo]